proj/libs/FLOPPY/lex_parse/FLOPPY_parser.output
Grammar

    0 $accept: input $end

    1 input: statement ';'

    2 statement: create_statement

    3 create_statement: CREATE TABLE ID opt_volatile '(' column_def_commalist ',' primary_key opt_foreign_key_list ')'

    4 opt_volatile: VOLATILE
    5             | %empty

    6 column_def_commalist: column_def
    7                     | column_def_commalist ',' column_def

    8 column_def: ID column_type opt_column_size

    9 attribute_list: ID
   10               | attribute_list ',' ID

   11 primary_key: PRIMARY KEY '(' attribute_list ')'

   12 opt_foreign_key_list: opt_foreign_key_list ',' foreign_key
   13                     | %empty

   14 foreign_key: FOREIGN KEY '(' attribute_list ')' REFERENCES ID

   15 column_type: INT
   16            | FLOAT
   17            | VARCHAR
   18            | DATETIME
   19            | BOOLEAN

   20 opt_column_size: '(' int_literal ')'
   21                | %empty

   22 int_literal: INTVAL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 3 11 14 20
')' (41) 3 11 14 20
',' (44) 3 7 10 12
';' (59) 1
error (256)
INTVAL (258) 22
ID (259) 3 8 9 10 14
CREATE (260) 3
TABLE (261) 3
VOLATILE (262) 4
PRIMARY (263) 11
FOREIGN (264) 14
KEY (265) 11 14
REFERENCES (266) 14
INT (267) 15
FLOAT (268) 16
BOOLEAN (269) 19
DATETIME (270) 18
VARCHAR (271) 17


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
input (22)
    on left: 1, on right: 0
statement (23)
    on left: 2, on right: 1
create_statement (24)
    on left: 3, on right: 2
opt_volatile (25)
    on left: 4 5, on right: 3
column_def_commalist (26)
    on left: 6 7, on right: 3 7
column_def (27)
    on left: 8, on right: 6 7
attribute_list (28)
    on left: 9 10, on right: 10 11 14
primary_key (29)
    on left: 11, on right: 3
opt_foreign_key_list (30)
    on left: 12 13, on right: 3 12
foreign_key (31)
    on left: 14, on right: 12
column_type (32)
    on left: 15 16 17 18 19, on right: 8
opt_column_size (33)
    on left: 20 21, on right: 8
int_literal (34)
    on left: 22, on right: 20


State 0

    0 $accept: . input $end

    CREATE  shift, and go to state 1

    input             go to state 2
    statement         go to state 3
    create_statement  go to state 4


State 1

    3 create_statement: CREATE . TABLE ID opt_volatile '(' column_def_commalist ',' primary_key opt_foreign_key_list ')'

    TABLE  shift, and go to state 5


State 2

    0 $accept: input . $end

    $end  shift, and go to state 6


State 3

    1 input: statement . ';'

    ';'  shift, and go to state 7


State 4

    2 statement: create_statement .

    $default  reduce using rule 2 (statement)


State 5

    3 create_statement: CREATE TABLE . ID opt_volatile '(' column_def_commalist ',' primary_key opt_foreign_key_list ')'

    ID  shift, and go to state 8


State 6

    0 $accept: input $end .

    $default  accept


State 7

    1 input: statement ';' .

    $default  reduce using rule 1 (input)


State 8

    3 create_statement: CREATE TABLE ID . opt_volatile '(' column_def_commalist ',' primary_key opt_foreign_key_list ')'

    VOLATILE  shift, and go to state 9

    $default  reduce using rule 5 (opt_volatile)

    opt_volatile  go to state 10


State 9

    4 opt_volatile: VOLATILE .

    $default  reduce using rule 4 (opt_volatile)


State 10

    3 create_statement: CREATE TABLE ID opt_volatile . '(' column_def_commalist ',' primary_key opt_foreign_key_list ')'

    '('  shift, and go to state 11


State 11

    3 create_statement: CREATE TABLE ID opt_volatile '(' . column_def_commalist ',' primary_key opt_foreign_key_list ')'

    ID  shift, and go to state 12

    column_def_commalist  go to state 13
    column_def            go to state 14


State 12

    8 column_def: ID . column_type opt_column_size

    INT       shift, and go to state 15
    FLOAT     shift, and go to state 16
    BOOLEAN   shift, and go to state 17
    DATETIME  shift, and go to state 18
    VARCHAR   shift, and go to state 19

    column_type  go to state 20


State 13

    3 create_statement: CREATE TABLE ID opt_volatile '(' column_def_commalist . ',' primary_key opt_foreign_key_list ')'
    7 column_def_commalist: column_def_commalist . ',' column_def

    ','  shift, and go to state 21


State 14

    6 column_def_commalist: column_def .

    $default  reduce using rule 6 (column_def_commalist)


State 15

   15 column_type: INT .

    $default  reduce using rule 15 (column_type)


State 16

   16 column_type: FLOAT .

    $default  reduce using rule 16 (column_type)


State 17

   19 column_type: BOOLEAN .

    $default  reduce using rule 19 (column_type)


State 18

   18 column_type: DATETIME .

    $default  reduce using rule 18 (column_type)


State 19

   17 column_type: VARCHAR .

    $default  reduce using rule 17 (column_type)


State 20

    8 column_def: ID column_type . opt_column_size

    '('  shift, and go to state 22

    $default  reduce using rule 21 (opt_column_size)

    opt_column_size  go to state 23


State 21

    3 create_statement: CREATE TABLE ID opt_volatile '(' column_def_commalist ',' . primary_key opt_foreign_key_list ')'
    7 column_def_commalist: column_def_commalist ',' . column_def

    ID       shift, and go to state 12
    PRIMARY  shift, and go to state 24

    column_def   go to state 25
    primary_key  go to state 26


State 22

   20 opt_column_size: '(' . int_literal ')'

    INTVAL  shift, and go to state 27

    int_literal  go to state 28


State 23

    8 column_def: ID column_type opt_column_size .

    $default  reduce using rule 8 (column_def)


State 24

   11 primary_key: PRIMARY . KEY '(' attribute_list ')'

    KEY  shift, and go to state 29


State 25

    7 column_def_commalist: column_def_commalist ',' column_def .

    $default  reduce using rule 7 (column_def_commalist)


State 26

    3 create_statement: CREATE TABLE ID opt_volatile '(' column_def_commalist ',' primary_key . opt_foreign_key_list ')'

    $default  reduce using rule 13 (opt_foreign_key_list)

    opt_foreign_key_list  go to state 30


State 27

   22 int_literal: INTVAL .

    $default  reduce using rule 22 (int_literal)


State 28

   20 opt_column_size: '(' int_literal . ')'

    ')'  shift, and go to state 31


State 29

   11 primary_key: PRIMARY KEY . '(' attribute_list ')'

    '('  shift, and go to state 32


State 30

    3 create_statement: CREATE TABLE ID opt_volatile '(' column_def_commalist ',' primary_key opt_foreign_key_list . ')'
   12 opt_foreign_key_list: opt_foreign_key_list . ',' foreign_key

    ','  shift, and go to state 33
    ')'  shift, and go to state 34


State 31

   20 opt_column_size: '(' int_literal ')' .

    $default  reduce using rule 20 (opt_column_size)


State 32

   11 primary_key: PRIMARY KEY '(' . attribute_list ')'

    ID  shift, and go to state 35

    attribute_list  go to state 36


State 33

   12 opt_foreign_key_list: opt_foreign_key_list ',' . foreign_key

    FOREIGN  shift, and go to state 37

    foreign_key  go to state 38


State 34

    3 create_statement: CREATE TABLE ID opt_volatile '(' column_def_commalist ',' primary_key opt_foreign_key_list ')' .

    $default  reduce using rule 3 (create_statement)


State 35

    9 attribute_list: ID .

    $default  reduce using rule 9 (attribute_list)


State 36

   10 attribute_list: attribute_list . ',' ID
   11 primary_key: PRIMARY KEY '(' attribute_list . ')'

    ','  shift, and go to state 39
    ')'  shift, and go to state 40


State 37

   14 foreign_key: FOREIGN . KEY '(' attribute_list ')' REFERENCES ID

    KEY  shift, and go to state 41


State 38

   12 opt_foreign_key_list: opt_foreign_key_list ',' foreign_key .

    $default  reduce using rule 12 (opt_foreign_key_list)


State 39

   10 attribute_list: attribute_list ',' . ID

    ID  shift, and go to state 42


State 40

   11 primary_key: PRIMARY KEY '(' attribute_list ')' .

    $default  reduce using rule 11 (primary_key)


State 41

   14 foreign_key: FOREIGN KEY . '(' attribute_list ')' REFERENCES ID

    '('  shift, and go to state 43


State 42

   10 attribute_list: attribute_list ',' ID .

    $default  reduce using rule 10 (attribute_list)


State 43

   14 foreign_key: FOREIGN KEY '(' . attribute_list ')' REFERENCES ID

    ID  shift, and go to state 35

    attribute_list  go to state 44


State 44

   10 attribute_list: attribute_list . ',' ID
   14 foreign_key: FOREIGN KEY '(' attribute_list . ')' REFERENCES ID

    ','  shift, and go to state 39
    ')'  shift, and go to state 45


State 45

   14 foreign_key: FOREIGN KEY '(' attribute_list ')' . REFERENCES ID

    REFERENCES  shift, and go to state 46


State 46

   14 foreign_key: FOREIGN KEY '(' attribute_list ')' REFERENCES . ID

    ID  shift, and go to state 47


State 47

   14 foreign_key: FOREIGN KEY '(' attribute_list ')' REFERENCES ID .

    $default  reduce using rule 14 (foreign_key)
